<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:id="@+id/main">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/toolbar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pdfViewer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pdf_viewer"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_toolbar"
        app:layout_constraintBottom_toTopOf="@id/imgViewer"
        android:backgroundTint="@color/translink_blue"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textAllCaps="false"
        android:padding="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imgViewer"
        android:layout_marginTop="30dp"
        android:text="@string/img_viewer"
        android:textColor="@color/white"
        android:backgroundTint="@color/translink_blue"
        android:textAllCaps="false"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pdfViewer"
        android:padding="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userData"
        android:layout_marginTop="30dp"
        android:text="@string/user_data"
        android:textColor="@color/white"
        android:backgroundTint="@color/translink_blue"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/imgViewer"
        android:padding="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>