<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.example.androiddevelopment.presentation.viewmodel.ImageViewerViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".presentation.ui.ImageViewerActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:adjustViewBounds="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/camButton"
            android:contentDescription="@string/image_description"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/camButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/open_camera"
            android:onClick="@{()->viewModel.onClickOpenCamera()}"
            android:textAllCaps="false"
            android:textColor="@color/primary_dark"
            app:icon="@drawable/ic_camera"
            app:iconGravity="textStart"
            app:iconTint="@color/primary_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            app:strokeColor="@color/primary_dark"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/galleryBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/open_gallery"
            android:textAllCaps="false"
            android:onClick="@{()->viewModel.onClickOpenGallery()}"
            android:textColor="@color/white"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:backgroundTint="@color/primary_dark"
            app:cornerRadius="8dp"
            app:icon="@drawable/ic_gallery"
            app:iconGravity="textStart"
            app:iconTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/camButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>